--- a/templates/create.html
+++ b/templates/create.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Centro de ayuda- La Gata y la Luna</title>
-    <link rel="icon" type="image/x-icon" href="static\images\logo_oficial.png">
-    <link rel="stylesheet" href="static\css\style_create.css">
+    <link rel="icon" type="image/x-icon" href="..\static\images\logo_oficial.png">
+    <link rel="stylesheet" href="..\static\css\style_create.css">
 </head>
 <body>
     
@@ -65,8 +65,6 @@
                 </fieldset>
                 
             </form>
-            
-            <script src="static\js\validacion_formulario.js"></script>
 
         </section>
 
