--- a/templates/edit.html
+++ b/templates/edit.html
@@ -38,7 +38,7 @@
 
             <p class="pregunta">Formulario de Datos</p>
 
-            <p> Ingrese los datos que se desean agregar </p>
+            <p> Ingrese los datos que se desean actualizar </p>
 
             <fieldset class="campo_formulario">
                 {% for libro in d %}
